# fda-supply-chain-analytics

./: .gitignore  NOTES.md  README.md  main.py  pyproject.toml
.github/workflows/: fda_pipeline.yml
FDA_Pipeline/: .user.yml  dbt_project.yml
FDA_Pipeline/models/: sources.yml
FDA_Pipeline/models/gold/: mart_alternatives.sql  mart_manufacturer_risk.sql  mart_shortage_risk.sql
FDA_Pipeline/models/staging/: schema.yml  stg_approval_manufacturers.sql  stg_approval_substances.sql  stg_approvals.sql  stg_recall_manufacturers.sql  stg_recall_substances.sql  stg_recalls.sql  stg_shortage_manufacturers.sql  stg_shortage_substances.sql  stg_shortages.sql
airflow/: docker-compose.yaml
airflow/dags/: fda_pipeline_dag.py
dashboard/: app.py
ingestion/: fda_approvals.py  fda_recalls.py  fda_shortages.py
notebooks/: 01_explore_fda_api.ipynb
