[project]
name = "pharma-supply-chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "pip>=26.0.1",
    "plotly>=6.6.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "setuptools>=82.0.0",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.55.0",
    "sweetviz>=2.3.1",
]
